# rusty_request

./: Cargo.toml  README.md  gap-analysis.md
.github/workflows/: ci.yml
src/: base64.rs  body.rs  client.rs  cookie.rs  error.rs  header.rs  http1.rs  json.rs  lib.rs  method.rs  multipart.rs  pool.rs  proxy.rs  rand.rs  request.rs  response.rs  retry.rs  status.rs  stream.rs  streaming.rs  tls.rs  url.rs
tests/: client.rs  https.rs
tests/common/: mod.rs
